# clipclip

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  deny.toml  release-plz.toml
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: save_to_disk.rs
src/: capture.rs  config.rs  encode.rs  error.rs  lib.rs  resample.rs  segment.rs  segmenter.rs  tap.rs  vad.rs  worker.rs
